--- a/MatricDCSCommunicator/MatricDCSCommunicator.csproj
+++ b/MatricDCSCommunicator/MatricDCSCommunicator.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DcsBiosCommunicator\DcsBiosCommunicator.csproj" />
+  </ItemGroup>
+
 </Project>
