--- a/DCSMATRICFeeder/DCSMATRICFeeder.csproj
+++ b/DCSMATRICFeeder/DCSMATRICFeeder.csproj
@@ -9,6 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DcsBiosCommunicator\DcsBiosCommunicator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MatricIntegration">
+      <HintPath>MatricIntegration.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
