--- a/DCSMATRICFeeder/App.config
+++ b/DCSMATRICFeeder/App.config
@@ -16,6 +16,9 @@
             <setting name="DCSBIOSJsonPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="AircraftVariables" serializeAs="String">
+                <value />
+            </setting>
         </DCSMATRICFeeder.Properties.Settings>
     </userSettings>
 </configuration>
