--- a/DCSMATRICFeeder/Properties/Settings.settings
+++ b/DCSMATRICFeeder/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="DCSBIOSJsonPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AircraftVariables" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
