--- a/DCSMATRICFeeder/App.config
+++ b/DCSMATRICFeeder/App.config
@@ -19,6 +19,9 @@
             <setting name="AircraftVariables" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UpdateFrequency" serializeAs="String">
+                <value>10</value>
+            </setting>
         </DCSMATRICFeeder.Properties.Settings>
     </userSettings>
 </configuration>
