--- a/DCSMATRICFeeder/Properties/Settings.settings
+++ b/DCSMATRICFeeder/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="AircraftVariables" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="UpdateFrequency" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
