Added manual to project

--- a/DCSMATRICFeeder/DCSMATRICFeeder.csproj
+++ b/DCSMATRICFeeder/DCSMATRICFeeder.csproj
@@ -50,6 +50,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="DCSMATRICManual.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
