WIP sending input to DCS-BIOS

--- a/DCSMATRICFeeder/App.config
+++ b/DCSMATRICFeeder/App.config
@@ -22,6 +22,9 @@
             <setting name="UpdateFrequency" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="DCSBIOSImportPort" serializeAs="String">
+                <value>7778</value>
+            </setting>
         </DCSMATRICFeeder.Properties.Settings>
     </userSettings>
 </configuration>
