--- a/DCSMATRICFeeder/DCSMATRICFeeder.csproj
+++ b/DCSMATRICFeeder/DCSMATRICFeeder.csproj
@@ -3,11 +3,15 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
+	<Deterministic>False</Deterministic>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>app_icon_128.ico</ApplicationIcon>
     <PackageIcon>app_icon_dcs_128.png</PackageIcon>
+    <Title>DCS-BIOS MATRIC Middleware</Title>
+	<Version>1.3</Version>
+    <RootNamespace>EXM.DBMM</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
